# mcontrol

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  docker-compose.yml  firebase.json  package.json  pnpm-lock.yaml
.github/scripts/: sync-versions.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_baseline.py
apps/api/app/: __init__.py  main.py
apps/api/app/lib/: __init__.py  config.py  crypto.py  firebase.py
apps/api/app/middleware/: auth.py
apps/api/app/models/: __init__.py  credential.py  user.py
apps/api/app/repositories/: __init__.py  base.py  credential.py  user.py
apps/api/app/routes/: auth.py  health.py  keys.py  websocket.py
apps/api/tests/: conftest.py  test_health.py  test_keys.py
apps/desktop/: .env.dev  .env.production  .env.staging  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ConnectionStatus.tsx  LoginScreen.tsx  UserMenu.tsx
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
docs/ADR/: 001-tauri-cloud-run-monorepo.md  002-python-fastapi.md
infra/: secrets.example
infra/clouddeploy/: deploy.sh  service.yaml
infra/firebase/: config.example.json
infra/sql/: baseline.sql
infra/terraform/: .gitignore
infra/terraform/bootstrap/: README.md  bootstrap.sh
specs/r1a/: 01.bootstrap.md  02.firebase-auth-google-sso.md  03.secure-key-storage.md
(+19 files in other folders)
